--- a/RegistrationPage.xaml
+++ b/RegistrationPage.xaml
@@ -5,10 +5,7 @@
              Title="RegistrationPage">
 
     <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+        <VerticalStackLayout Spacing="25" Padding="30,0" VerticalOptions="Center">
 
             <!--<Image
                 Source="dotnet_bot.png"
@@ -16,121 +13,58 @@
                 HeightRequest="200"
                 HorizontalOptions="Center" />-->
 
-            <Label
-                Text="Register Screen"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="16"
-                HorizontalOptions="Center" />
+            <Label Text="Register User"
+                   x:Name="lblTitle"
+                   SemanticProperties.HeadingLevel="Level1"
+                   FontSize="20"
+                   HorizontalOptions="Center" />
 
-            <HorizontalStackLayout VerticalOptions="Center"
-                                   HorizontalOptions="FillAndExpand"
-                                   BackgroundColor="#e1e1e1"
-                                   Padding="10,0,10,0"
-                                   SemanticProperties.HeadingLevel="Level2">
-                <Entry
-                Text=""
-                Placeholder="Name"
-                HorizontalOptions="FillAndExpand"
-                    PlaceholderColor="Black"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Name"
-                FontSize="14"/>
-            </HorizontalStackLayout>
-            <HorizontalStackLayout VerticalOptions="Center"
-                                   HorizontalOptions="FillAndExpand"
-                                   BackgroundColor="#e1e1e1"
-                                   Padding="10,0,10,0"
-                                   SemanticProperties.HeadingLevel="Level2">
-                <Entry
-                Text=""
-                Placeholder="PAN"
-                    PlaceholderColor="Black"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="PAN"
-                FontSize="14"
-                HorizontalOptions="FillAndExpand"/>
-                
-            </HorizontalStackLayout>
-            <HorizontalStackLayout VerticalOptions="Center"
-                                   HorizontalOptions="FillAndExpand"
-                                   BackgroundColor="#e1e1e1"
-                                   Padding="10,0,10,0"
-                                   SemanticProperties.HeadingLevel="Level2">
-                <Entry
-                Text=""
-                Placeholder="UCC CODE"
-                    PlaceholderColor="Black"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="UCC CODE"
-                FontSize="14"
-                HorizontalOptions="FillAndExpand"
-                 />
+            <Frame BackgroundColor="WhiteSmoke" CornerRadius="5" Padding="0" HasShadow="True">
+                <Entry Text="" Placeholder="Name" x:Name="entryName" HorizontalOptions="FillAndExpand"
+                       PlaceholderColor="Black" SemanticProperties.HeadingLevel="Level2"
+                       SemanticProperties.Description="Name" FontSize="14"
+                       Keyboard="Text" />
+            </Frame>
 
-            </HorizontalStackLayout>
-            <HorizontalStackLayout VerticalOptions="Center"
-                                   HorizontalOptions="FillAndExpand"
-                                   BackgroundColor="#e1e1e1"
-                                   Padding="10,0,10,0"
-                                   SemanticProperties.HeadingLevel="Level2">
-                <Entry
-                Text=""
-                Placeholder="MOBILE NUMBER"
-                    PlaceholderColor="Black"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="EMAIL ID"
-                FontSize="14"
-                HorizontalOptions="FillAndExpand"
-                 />
+            <Frame BackgroundColor="WhiteSmoke" CornerRadius="5" Padding="0" HasShadow="True">
+                <Entry Text="" Placeholder="PAN" x:Name="entryPAN" PlaceholderColor="Black"
+                       SemanticProperties.HeadingLevel="Level2" SemanticProperties.Description="PAN"
+                       FontSize="14"
+                       Keyboard="Text" />
+            </Frame>
 
-            </HorizontalStackLayout>
+            <Frame BackgroundColor="WhiteSmoke" CornerRadius="5" Padding="0" HasShadow="True">
+                <Entry Text="" Placeholder="UCC CODE" x:Name="entryUCC" PlaceholderColor="Black"
+                       SemanticProperties.HeadingLevel="Level2" SemanticProperties.Description="UCC CODE"
+                       FontSize="14"
+                       Keyboard="Text" />
+            </Frame>
 
+            <Frame BackgroundColor="WhiteSmoke" CornerRadius="5" Padding="0" HasShadow="True">
+                <Entry Text="" Placeholder="MOBILE NUMBER" x:Name="entryMobile" PlaceholderColor="Black"
+                       SemanticProperties.HeadingLevel="Level2" SemanticProperties.Description="MOBILE NUMBER"
+                       FontSize="14"
+                       Keyboard="Telephone" />
+            </Frame>
 
-            <HorizontalStackLayout VerticalOptions="Center"
-                                   HorizontalOptions="FillAndExpand"
-                                   BackgroundColor="#e1e1e1"
-                                   Padding="10,0,10,0"
-                                   SemanticProperties.HeadingLevel="Level2">
-
-                
-                <Entry
-                Text=""
-                Placeholder="DOB"
-                    PlaceholderColor="Black"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="DOB"
-                FontSize="14"
-                HorizontalOptions="FillAndExpand"
-                 />
+            <Frame BackgroundColor="WhiteSmoke" CornerRadius="5" Padding="0" HasShadow="True">
+                <Entry Text="" Placeholder="DOB" x:Name="entryDOB" PlaceholderColor="Black"
+                       SemanticProperties.HeadingLevel="Level2" SemanticProperties.Description="DOB"
+                       FontSize="14"
+                       Keyboard="Default" />
                 <DatePicker x:Name="myDatePicker" Format="D" />
+            </Frame>
 
-            </HorizontalStackLayout>
+            <Frame BackgroundColor="WhiteSmoke" CornerRadius="5" Padding="0" HasShadow="True">
+                <Entry Text="" Placeholder="EMAIL ID" x:Name="entryEmail" PlaceholderColor="Black"
+                       SemanticProperties.HeadingLevel="Level2" SemanticProperties.Description="EMAIL ID"
+                       FontSize="14"
+                       Keyboard="Email" />
+            </Frame>
 
-            <HorizontalStackLayout VerticalOptions="Center"
-                                   HorizontalOptions="FillAndExpand"
-                                   BackgroundColor="#e1e1e1"
-                                   Padding="10,0,10,0"
-                                   SemanticProperties.HeadingLevel="Level2">
-                <Entry
-                Text=""
-                Placeholder="EMAIL ID"
-                    PlaceholderColor="Black"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="EMAIL ID"
-                FontSize="14"
-                HorizontalOptions="FillAndExpand"
-                 />
-
-            </HorizontalStackLayout>
-
-
-            <Button
-                x:Name="btn_register"
-                Text="Register"
-                SemanticProperties.Hint="Register the user when click"
-                
-                HorizontalOptions="Center" />
-
+            <Button x:Name="btn_register" Text="Register" Clicked="btn_register_Clicked"
+                    SemanticProperties.Hint="Register the user when clicked"
+                    HorizontalOptions="Center" />
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
