--- a/DashboardPage.xaml
+++ b/DashboardPage.xaml
@@ -2,11 +2,12 @@
 <FlyoutPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Grievance.DashboardPage"
-             Title="DashboardPage">
+             Title="DashboardPage"
+            x:Name="MainFlyoutPage">
     <FlyoutPage.Flyout>
         <ContentPage Title="Master Page">
             <StackLayout>
-                <Label Text="Logged as ADMIN" VerticalOptions="Start" Margin="10,20,10,5" FontSize="16" />
+                <Label x:Name="userRole" Text="Logged as USER" VerticalOptions="Start" Margin="10,20,10,5" FontSize="16" />
                 <BoxView HeightRequest="1" BackgroundColor="Black" />
                 <ListView x:Name="MenuItems" Margin="20"  ItemSelected="OnMenuItemSelected">
                     <ListView.ItemsSource>
