--- a/ClinetDashBorad.xaml
+++ b/ClinetDashBorad.xaml
@@ -2,15 +2,14 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Grievance.ClinetDashBorad"
-             Title="ClinetDashBorad">
+             Title="ClinetDashBorad"
+             
+             BackgroundImageSource="bc.jpg">
     
 
 
-    <!--<Grid Margin="20,-650,20,20" BackgroundColor="Aquamarine" HeightRequest="35">
-        <Label Text="Client DashBoard" />
-    </Grid>-->
 
-    <!--<Grid>
+    <Grid>
         <Grid.RowDefinitions >
             <RowDefinition Height="2*" />
             <RowDefinition Height="*" />
@@ -21,49 +20,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         
-    </Grid>-->
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0.2*" />
-            <RowDefinition />
-            <RowDefinition Height="100" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <BoxView Color="Green" HeightRequest="35" />
-        <Label Text="OPEN QUERY"
-               HorizontalOptions="Center"
-               VerticalOptions="Center" />
-        <BoxView Grid.Column="1"
-                 Color="Blue" HeightRequest="35"   />
-        <Label Grid.Column="1"
-               Text="NEW QUERY"
-               HorizontalOptions="Center"
-               VerticalOptions="Center" />
-        <BoxView Grid.Row="1"
-                 Color="Teal" />
-        <Label Grid.Row="1"
-               Text="Row 1, Column 0"
-               HorizontalOptions="Center"
-               VerticalOptions="Center" />
-        <BoxView Grid.Row="1"
-                 Grid.Column="1"
-                 Color="Purple" />
-        <Label Grid.Row="1"
-               Grid.Column="1"
-               Text="Row1, Column 1"
-               HorizontalOptions="Center"
-               VerticalOptions="Center" />
-        <BoxView Grid.Row="2"
-                 Grid.ColumnSpan="2"
-                 Color="Red" />
-        <Label Grid.Row="2"
-               Grid.ColumnSpan="2"
-               Text="Row 2, Columns 0 and 1"
-               HorizontalOptions="Center"
-               VerticalOptions="Center" />
     </Grid>
+    
 
 </ContentPage>
